[gd_scene format=3 uid="uid://drpmr8uqsehup"]

[ext_resource type="Script" uid="uid://dqe6rpkv1d25p" path="res://Quinn/health_layer.gd" id="1_1nbg0"]
[ext_resource type="PackedScene" uid="uid://d1y6vvju5qlhb" path="res://Quinn/health_bar.tscn" id="1_4ahf8"]
[ext_resource type="Texture2D" uid="uid://dcctieyd2qlll" path="res://Quinn/art/UI/mana_bar_large_fill.png" id="3_1dfdn"]
[ext_resource type="Texture2D" uid="uid://bnw3ml8yoj4ab" path="res://Quinn/art/UI/hp_bar_large_flipped.png" id="3_4ifm6"]
[ext_resource type="Texture2D" uid="uid://bnpxns3bt42vb" path="res://Quinn/art/UI/hp_bar_large_fill_flipped.png" id="4_1dfdn"]
[ext_resource type="FontFile" uid="uid://d0fml67pkspne" path="res://Quinn/font/yoster.ttf" id="6_qocw7"]

[node name="HealthLayer" type="CanvasLayer" unique_id=948565441]
script = ExtResource("1_1nbg0")

[node name="PlayerHealthBar" parent="." unique_id=2041445153 instance=ExtResource("1_4ahf8")]
offset_left = 47.0
offset_top = 53.0
offset_right = 270.0
offset_bottom = 75.0
scale = Vector2(2, 2)

[node name="PlayerManaBar" parent="." unique_id=941275197 instance=ExtResource("1_4ahf8")]
visible = false
offset_left = 48.0
offset_top = 97.0
offset_right = 271.0
offset_bottom = 119.0
scale = Vector2(2, 2)
texture_progress = ExtResource("3_1dfdn")

[node name="EnemyHealthBar" parent="." unique_id=1237102329 instance=ExtResource("1_4ahf8")]
offset_left = 636.0
offset_top = 53.0
offset_right = 859.0
offset_bottom = 75.0
scale = Vector2(2, 2)
fill_mode = 1
texture_over = ExtResource("3_4ifm6")
texture_progress = ExtResource("4_1dfdn")

[node name="Player" type="Label" parent="." unique_id=1956964740]
offset_left = 47.0
offset_top = 3.0
offset_right = 90.75
offset_bottom = 16.0
scale = Vector2(4, 4)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_qocw7")
theme_override_font_sizes/font_size = 12
text = "Player"
horizontal_alignment = 1

[node name="Enemy" type="Label" parent="." unique_id=387088174]
offset_left = 905.0
offset_right = 948.75
offset_bottom = 13.0
scale = Vector2(4, 4)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_qocw7")
theme_override_font_sizes/font_size = 12
text = "Enemy"
horizontal_alignment = 1
